feat: responsiveness done 🙏

--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^4.29.9",
-    "dotenv": "^16.3.1"
+    "@tanstack/eslint-plugin-query": "^4.29.9"
   }
 }
