--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
     "next": "^13.4.9",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "^8.4.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
