--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "falgunisarkar",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^4.29.19",
-    "@tanstack/react-query-devtools": "^4.29.19",
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.7",
-    "@vercel/analytics": "^1.0.1",
-    "animejs": "^3.2.1",
-    "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "^13.4.9",
-    "next": "^13.4.9",
-    "nextjs-progressbar": "^0.0.16",
-    "postcss": "^8.4.25",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6"
-  },
-  "devDependencies": {
-    "@tanstack/eslint-plugin-query": "^4.29.9",
-    "@types/animejs": "^3.1.7"
-  }
+	"name": "falgunisarkar",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@tanstack/react-query": "^4.32.0",
+		"@tanstack/react-query-devtools": "^4.32.0",
+		"@types/node": "^20.4.2",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@vercel/analytics": "^1.0.1",
+		"animejs": "^3.2.1",
+		"autoprefixer": "^10.4.14",
+		"axios": "^1.4.0",
+		"eslint": "^8.45.0",
+		"eslint-config-next": "^13.4.11",
+		"next": "^13.4.11",
+		"nextjs-progressbar": "^0.0.16",
+		"postcss": "^8.4.26",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"tailwindcss": "^3.3.3",
+		"typescript": "^5.1.6"
+	},
+	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^4.29.25",
+		"@types/animejs": "^3.1.7"
+	},
+	"repository": {
+		"url": "https://github.com/lostgirljourney/falgunisarkar.git"
+	}
 }
