--- a/package.json
+++ b/package.json
@@ -9,28 +9,30 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@tanstack/react-query": "^5.8.1",
-		"@tanstack/react-query-devtools": "^5.8.1",
-		"@types/node": "^20.9.0",
-		"@types/react": "^18.2.37",
-		"@types/react-dom": "^18.2.15",
-		"@vercel/analytics": "^1.1.1",
-		"animejs": "^3.2.1",
-		"autoprefixer": "^10.4.16",
-		"axios": "^1.6.1",
-		"eslint": "^8.53.0",
-		"eslint-config-next": "^14.0.1",
-		"next": "^14.0.1",
+		"@tanstack/react-query": "^5.29.2",
+		"@tanstack/react-query-devtools": "^5.29.2",
+		"@types/node": "^20.12.7",
+		"@types/react": "^18.2.79",
+		"@types/react-dom": "^18.2.25",
+		"@vercel/analytics": "^1.2.2",
+		"animejs": "^3.2.2",
+		"autoprefixer": "^10.4.19",
+		"axios": "^1.6.8",
+		"clsx": "^2.1.0",
+		"eslint": "^9.1.0",
+		"eslint-config-next": "^14.2.2",
+		"next": "^14.2.2",
 		"nextjs-progressbar": "^0.0.16",
-		"postcss": "^8.4.31",
+		"postcss": "^8.4.38",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"tailwindcss": "^3.3.5",
-		"typescript": "^5.2.2"
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.4.5"
 	},
 	"devDependencies": {
-		"@tanstack/eslint-plugin-query": "^5.6.0",
-		"@types/animejs": "^3.1.11"
+		"@tanstack/eslint-plugin-query": "^5.28.11",
+		"@types/animejs": "^3.1.12"
 	},
 	"repository": {
 		"url": "https://github.com/lostgirljourney/falgunisarkar.git"
