--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@types/react": "^18.2.79",
 		"@types/react-dom": "^18.2.25",
 		"@vercel/analytics": "^1.2.2",
+		"@vercel/speed-insights": "^1.0.10",
 		"animejs": "^3.2.2",
 		"autoprefixer": "^10.4.19",
 		"axios": "^1.6.8",
